kubernetes/issuer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: issuer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: issuer
  template:
    metadata:
      labels:
        app: issuer
    spec:
      containers:
        - name: issuer-container
          image: bisht13/issuer:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: issuer-svc
spec:
  selector:
    app: issuer
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
