kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: managed-cert-ingress
  namespace: email-wallet-v1_1
  annotations:
    kubernetes.io/ingress.global-static-ip-name: email-wallet-relayer-v1_1
    networking.gke.io/managed-certificates: managed-cert
    ingressClassName: "gce"
spec:
  rules:
    - host: ewrelayer.emailwallet.org
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: relayer-svc
                port:
                  number: 443
